// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> should render as expected when all items are supposed to be shown 1`] = `
<Footer
  showCouponsHint={true}
  showTaxDisclaimer={true}
>
  <CouponsHint>
    <Translate
      className="css-7apcdo"
      params={Object {}}
      string="cart.coupons_not_supported"
    >
      <span
        className="css-7apcdo"
      >
        cart.coupons_not_supported
      </span>
    </Translate>
  </CouponsHint>
  <TaxDisclaimer />
</Footer>
`;

exports[`<Footer /> should render as expected when no items are supposed to be shown 1`] = `
<Footer
  showCouponsHint={false}
  showTaxDisclaimer={false}
/>
`;

exports[`<Footer /> should render as expected when only the tax disclaimer is supposed to be shown 1`] = `
<Footer
  showCouponsHint={false}
  showTaxDisclaimer={true}
>
  <TaxDisclaimer />
</Footer>
`;

exports[`<Footer /> should render as expected when only the the coupons hint is supposed to be shown 1`] = `
<Footer
  showCouponsHint={true}
  showTaxDisclaimer={false}
>
  <CouponsHint>
    <Translate
      className="css-7apcdo"
      params={Object {}}
      string="cart.coupons_not_supported"
    >
      <span
        className="css-7apcdo"
      >
        cart.coupons_not_supported
      </span>
    </Translate>
  </CouponsHint>
</Footer>
`;
